Klasör yönetimi ile ilgili gereksiz kodlar kaldırıldı; dosya yükleme işlevi güncellendi ve veri kaynağı yapılandırması değiştirildi.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=MustCloud
-spring.datasource.url=jdbc:postgresql://localhost:5432/dbcloud
+spring.datasource.url=jdbc:postgresql://localhost:5432/MustCloud
 spring.datasource.username=new_user
 spring.datasource.password=new_password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=none
